# TableTennisTable-Python

./: README.md  pyproject.toml  test.json
features/: game.feature
features/steps/: steps.py
src/: __init__.py  app.py  file_service.py  invalid_argument_exception.py  league.py  league_renderer.py
test/: app_test.py  league_renderer_test.py  league_test.py
test/integration/: game_test.py
