[tool.poetry]
name = "exercise-template"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"
pytest = "^7.2.2"

[tool.poetry.scripts]
start = "src:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
behave = "^1.2.6"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
